--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ node_modules/
 .env
 .env.local
 .env.*.local
+backend/.env
+
+# Service account keys
+**/service-account-key.json
+**/*-credentials.json
 
 # Build output
 .next/
