--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@google/genai": "^1.43.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
@@ -21,5 +22,8 @@
     "firebase-admin": "^13.7.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1"
+  },
+  "overrides": {
+    "tar": "^7.5.8"
   }
 }
