--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,18 +4,13 @@ NODE_ENV=development
 
 # Firebase
 FIREBASE_PROJECT_ID=feelingfine-b4106
-# Option A: Path to service account key file
-GOOGLE_APPLICATION_CREDENTIALS=./service-account-key.json
-# Option B: Base64-encoded service account JSON (for production)
-# FIREBASE_SERVICE_ACCOUNT_KEY=
+
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3002
+
+# Email (Resend)
+RESEND_API_KEY=
+FROM_EMAIL=Art <art@feelingfine.org>
 
 # Gemini AI
 GEMINI_API_KEY=
-
-# Email (Resend)
-EMAIL_API_KEY=
-EMAIL_FROM=hello@feelingfine.org
-
-# Security
-ADMIN_PASSCODE_HASH=
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3002
