--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express-rate-limit": "^7.5.0",
     "firebase-admin": "^13.7.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "node-cron": "^4.2.1"
   },
   "overrides": {
     "tar": "^7.5.8"
